--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>EdUp</title>
+    <title>Ed-Up</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <style media="screen">
+      hr {
+          display: block;
+          height: 1px;
+          border: 0;
+          border-top: 1px solid #ccc;
+          margin: 1em 0;
+          padding: 0;
+      }
+    </style>
+
   </head>
 
   <body>
+    <h1>Ed-Up!</h1>
+    <hr />
     <%= yield %>
+
+    <hr/>
+    © 2019 Ed-Up - Cookies, Privacy and Terms
   </body>
 </html>
