--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 <%= link_to "Add a New Resource", new_resource_path %>
+<%= link_to "Log Out", login_log_out_path %>
 <h1>List of Resources</h1>
 <%
 @resources.each do |resource|
