--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,27 +13,27 @@
 
   <div class="field">
     <%= form.label :login %>
-    <%= form.text_area :login %>
+    <%= form.text_field :login %>
   </div>
 
   <div class="field">
     <%= form.label :password %>
-    <%= form.text_area :password %>
+    <%= form.password_field :password %>
   </div>
 
   <div class="field">
     <%= form.label :first_name %>
-    <%= form.text_area :first_name %>
+    <%= form.text_field :first_name %>
   </div>
 
   <div class="field">
     <%= form.label :last_name %>
-    <%= form.text_area :last_name %>
+    <%= form.text_field :last_name %>
   </div>
 
   <div class="field">
     <%= form.label :email %>
-    <%= form.text_field :email %>
+    <%= form.email_field :email %>
   </div>
 
   <div class="actions">
